# escape-room-booking

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  nginx.conf  package-lock.json  package.json  pyproject.toml
backend/: pyproject.toml
backend/src/: manage.py
backend/src/apps/admin_calendar/: apps.py  urls.py  views.py
backend/src/apps/appointments/: apps.py  forms.py  urls.py
backend/src/apps/appointments/admin/: room_admin.py  slot_admin.py
backend/src/apps/appointments/migrations/: 0002_alter_slot_options_and_more.py  0003_remove_appointmentssettings_booked_slots_blocking_count_and_more.py
backend/src/apps/appointments/models/: MODELS.md  __init__.py  appointments_settings.py  room.py  schedule.py  slot.py
backend/src/apps/appointments/query_managers/: __init__.py  slot_relative_query_manager.py
backend/src/apps/appointments/serializers/: __init__.py  calendar_serializers.py  room_serializer.py  slot_serializers copy.py  slot_serializers.py
backend/src/apps/appointments/services/: __init__.py  slot_availability_service.py  slot_calendar_service.py  slot_factory_service.py  slot_price_service.py
backend/src/apps/appointments/tests/: __init__.py  appointments_settings_test_case.py  test_schedule.py  test_settings.py  test_slot.py  test_slot_availability_service.py  test_slot_calendar_service.py  test_slot_relative_getter_service.py
backend/src/apps/appointments/views/: __init__.py  room_views.py  slot_views.py
backend/src/apps/extended_admin/: admin.py  views.py
backend/src/apps/rooster/: apps.py
backend/src/apps/rooster/admin/: shift_admin.py
backend/src/apps/rooster/models/: shift.py
backend/src/apps/rooster/tests/: __init__.py  (+1 more)
backend/src/apps/shop/: apps.py  signals.py
backend/src/common/: days_of_week_mixin.py  singleton.py
backend/tests/: README.md  __init__.py
(+175 files in other folders)
